# wochenschau

./: .env.example  .gitignore  ACCESSIBILITY_IMPROVEMENTS.md  ACTIVITY_CARD_IMPROVEMENTS.md  ACTIVITY_EDITING.md  BACKGROUNDS_FINAL_STATUS.md  BACKGROUNDS_IMPLEMENTATION.md  BACKGROUNDS_SETUP.md  BACKGROUNDS_SUMMARY.md  BACKGROUND_IMAGE_EXPORT_FIX.md  BACKGROUND_IMAGE_IMPROVEMENTS.md  BETTER_EXPORT_ALTERNATIVES.md  CUSTOM_TITLE_FEATURE.md  DEPLOYMENT_CHECKLIST.md  EXPORTSHEET_IMPLEMENTATION_COMPLETE.md  EXPORT_BACKGROUNDS_INTEGRATION.md  EXPORT_CUSTOMIZATION_SUMMARY.md  EXPORT_CUSTOMIZATION_VISUAL_GUIDE.md  EXPORT_FIXES_FINAL_SUMMARY.md  EXPORT_FIXES_SUMMARY.md  EXPORT_FIX_QUICK_REFERENCE.md  EXPORT_FUNCTION_FIXED.md  EXPORT_IMPLEMENTATION.md  EXPORT_IMPROVEMENTS_SUMMARY.md  EXPORT_LAYOUT_CHANGES_SUMMARY.md  EXPORT_LAYOUT_CODE_CHANGES.md  EXPORT_LAYOUT_IMPROVEMENTS.md  EXPORT_LAYOUT_VERIFICATION.md  EXPORT_LAYOUT_VISUAL_GUIDE.md  EXPORT_LIBRARY_COMPARISON.md  EXPORT_QUALITY_CONFIG.md  EXPORT_REWRITE_SUMMARY.md  EXPORT_SHEET_UPDATE.md  EXPORT_WHITE_BORDER_FIX.md  FIX_BACKGROUND_SELECTOR_UX.md  FONTS_DOCUMENTATION_INDEX.md  FONTS_LOCAL_SETUP.md  FONT_EXPORT_CROSSORIGIN_FIX.md  FONT_RECOGNITION_FIX.md  GITHUB_PAGES_BACKGROUNDS_FIX.md  (+55 more)
docs/: ACTIVITY_CARD_VISUAL_GUIDE.md  AGENDA_FEATURES.md  AUTO_HEIGHT_IMPLEMENTATION.md  BACKGROUND_COLOR_FIX.md  CHANGES_SUMMARY.md  COMPLETION_REPORT.md  EXPORTSHEET_FIXED.md  EXPORT_CUSTOMIZATION_FEATURE.md  EXPORT_FEATURE.md  EXPORT_LAYOUT_QUICK_REFERENCE.md  FULL_HEIGHT_MODALS.md  LAYOUT_STRUCTURE.md  (+23 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+112 files in other folders)
